fix map spacing

--- a/web/components/Map.module.css
+++ b/web/components/Map.module.css
@@ -1,10 +1,10 @@
 @import "../styles/custom-media.css";
 
 .svgMap {
-  margin: 0rem 0 4rem;
+  margin: 3rem 0 4rem;
   width: 100vw;
 
   @media (--media-max-medium) {
-    margin-top: 3rem 0 4rem;
+    margin: 0 0 4rem;
   }
 }
